--- a/e2e/requirements.txt
+++ b/e2e/requirements.txt
@@ -1,7 +1,79 @@
-kagglehub>=0.2.0
-requests>=2.31.0
-pandas>=2.0.0
-scikit-learn>=1.3.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
+absl-py==2.3.1
+astunparse==1.6.3
+blinker==1.9.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.1.8
+contourpy==1.3.0
+cycler==0.12.1
+diskcache==5.6.3
+filelock==3.19.1
+Flask==3.0.0
+Flask-Cors==4.0.0
+flatbuffers==25.12.19
+fonttools==4.60.2
+fsspec==2025.10.0
+gast==0.7.0
+google-pasta==0.2.0
+grpcio==1.76.0
+h5py==3.14.0
+hf-xet==1.2.0
+huggingface-hub==0.36.0
+idna==3.11
+importlib_metadata==8.7.1
+importlib_resources==6.5.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.3
+kagglehub==0.3.13
+keras==3.10.0
+kiwisolver==1.4.7
+libclang==18.1.1
+llama_cpp_python==0.3.16
+Markdown==3.9
+markdown-it-py==3.0.0
+MarkupSafe==3.0.3
+matplotlib==3.9.4
+mdurl==0.1.2
+ml_dtypes==0.5.4
+mpmath==1.3.0
+namex==0.1.0
+networkx==3.2.1
+numpy==2.0.2
+opt_einsum==3.4.0
+optree==0.18.0
+packaging==25.0
+pandas==2.3.3
+pillow==11.3.0
+protobuf==6.33.2
+Pygments==2.19.2
+pyparsing==3.3.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.11.3
+requests==2.32.5
+rich==14.2.0
+safetensors==0.7.0
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+six==1.17.0
+sympy==1.14.0
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.1.0
+tf_keras==2.20.1
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.8.0
+tqdm==4.67.1
+transformers==4.57.3
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
+Werkzeug==3.0.1
+wrapt==2.0.1
+zipp==3.23.0
 
